--- a/package.json
+++ b/package.json
@@ -5,18 +5,32 @@
     "build": "next build",
     "start": "next start"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
+  },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
+    "@prisma/client": "^4.2.1",
+    "apollo-server-micro": "^3.10.1",
+    "graphql": "^16.6.0",
+    "micro-cors": "^0.1.1",
     "next": "latest",
+    "nexus": "^1.3.0",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-hook-form": "^7.34.2",
+    "react-hot-toast": "^2.3.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.35",
+    "@types/micro-cors": "^0.1.2",
+    "@types/node": "^18.7.9",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
+    "prisma": "^4.2.1",
     "tailwindcss": "^3.1.2",
-    "typescript": "4.7.2"
+    "ts-node": "^10.9.1",
+    "typescript": "^4.7.4"
   }
 }
